fix: ajustando visibilidade dos ícones na landing-page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,44 +27,3 @@ button {
   font: inherit;
   cursor: pointer;
 }
-
-.MuiFormLabel-root {
-  color: #FFF !important;
-}
-
-.MuiFormLabel-root.Mui-focused {
-  color: #FFF !important;
-}
-
-.MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
-  border-color: #FFF !important;
-}
-
-.MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
-  border-color: #FFF !important;
-}
-
-.MuiSvgIcon-root {
-  color: #FFF !important;
-}
-
-.MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
-  border-color: #FFF !important; 
-}
-
-.MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
-  border-color: #FFF !important; 
-}
-
-.MuiSvgIcon-root {
-  color: #FFF !important; 
-}
-
-.MuiOutlinedInput-root input {
-  color: #FFF !important; 
-}
-
-.MuiOutlinedInput-root.Mui-focused input {
-  color: #FFF !important; 
-}
-
